# Scholar-Tool

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
scholar/: __init__.py  graph.py  kw_search.py  main.py  relation.py  utils.py
