[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-cli"
version = "0.1.0"
description = "Semantic Scholar 论文分析工具"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "fire",
    "networkx",
    "pyvis",
]

[project.scripts]
scholar = "scholar.main:cli"

